fixing overflow of shelf items. fixes #209
Former-commit-id: b2e1aab6e9e86e226f1a9e2ad6bcc3e4500c56bb
Former-commit-id: 9ab3297948fb7b64c50b91be2539b79495482417
Former-commit-id: 4deeedd4879ce84a8c48bb35db6de6dd71e42e65
Former-commit-id: d4abe83f64a5298e28cd2790eba17f1f668deab4
Former-commit-id: a0a727ed64ca3de1ece9a757145267236819bce6
Former-commit-id: 3304c3dbc879dacf2f99be829326667615163bf3

--- a/podiobooks/themes/pb2-jq/css/shelf.css
+++ b/podiobooks/themes/pb2-jq/css/shelf.css
@@ -49,15 +49,13 @@
 .shelf-heading-dark {
     color: #fff;
     background: #40a8d1; /* Old browsers */
-background: -moz-linear-gradient(top,  #40a8d1 0%, #4280bd 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#40a8d1), color-stop(100%,#4280bd)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #40a8d1 0%,#4280bd 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40a8d1', endColorstr='#4280bd',GradientType=0 ); /* IE6-9 */
-
-
+	background: -moz-linear-gradient(top,  #40a8d1 0%, #4280bd 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#40a8d1), color-stop(100%,#4280bd)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #40a8d1 0%,#4280bd 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #40a8d1 0%,#4280bd 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40a8d1', endColorstr='#4280bd',GradientType=0 ); /* IE6-9 */
 }
 
 .shelf-light {
@@ -111,7 +109,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40a8d1', end
     overflow: hidden;
     position:relative;
 }
-
 .shelf-cover {
 	position:absolute;
 	left:10px;
@@ -132,6 +129,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40a8d1', end
     float: left;
     margin: -3px 0 0 76px;
     font-size: 10px;
+    height:105%;
+    overflow:hidden;
 }
 
 .shelf-item-heading {
